[package]
name = "muse"
edition = "2021"
version = "0.1.0"
authors = ["Abigail Adegbiji <adegbijiabigail@gmail.com>"]
description = "Muse is a cli audio player.\nSee https://github.com/aabiji/muse for more info."

[dependencies]
home = "0.5.9"
toml = "0.8.8"
lofty = "0.18.0"
rodio = "0.17.3"
serde_json = "1.0.111"
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }

[profile.dev.overrides."lewton"]
opt-level = 3